Get data from tag complete. On receiving side need to send acknowledgement with the receiving account ethereum address. On sending side, need to receive acknowledgement and send transfer using ethereum and the sender's ethereum address.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
                 android:value="com.example.graeme.beamitup.LandingPage" />
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
-                <data android:mimeType="application/com.example.graeme.beamitup"/>
+                <data android:mimeType="application/com.example.graeme.beamitup/transfer"/>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
