--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login"></activity>
         <activity
             android:name=".CreateTransferActivity"
             android:label="@string/title_activity_transfer_money"
@@ -79,10 +75,25 @@
         </activity>
         <activity
             android:name=".LandingPageActivity"
-            android:label="@string/title_activity_landing_page"></activity>
+            android:label="@string/title_activity_landing_page" />
         <activity
             android:name=".AddEthActivity"
-            android:label="@string/title_activity_add_eth"></activity>
+            android:label="@string/title_activity_add_eth" />
+        <activity
+            android:name=".ReceiveTransferActivity"
+            android:label="@string/title_activity_receive_transfer" />
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".CreateReplyTransferActivity"
+            android:label="@string/title_activity_create_reply_transfer"></activity>
     </application>
 
 </manifest>
