--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:23.4.0'
     testCompile 'junit:junit:4.12'
+    compile ('org.web3j:core:3.1.1-android')
 }
