--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,11 +41,6 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.graeme.beamitup.LandingPageActivity" />
-            <intent-filter>
-                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
-                <data android:mimeType="application/com.example.graeme.beamitup/ready_transfer" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".FinishTransferActivity"
@@ -88,7 +83,13 @@
         </activity>
         <activity
             android:name=".CreateReplyTransferActivity"
-            android:label="@string/title_activity_create_reply_transfer" />
+            android:label="@string/title_activity_create_reply_transfer">
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <data android:mimeType="application/com.example.graeme.beamitup/ready_transfer" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
