--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     testCompile 'junit:junit:4.12'
     compile('org.web3j:core:3.1.1-android')
+    compile 'com.google.code.gson:gson:2.8.2'
 }
