--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,13 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login" />
+            android:label="@string/title_activity_login"
+            android:screenOrientation="portrait"
+            />
         <activity
             android:name=".CreateTransferActivity"
             android:label="@string/title_activity_transfer_money"
+            android:screenOrientation="portrait"
             android:parentActivityName=".LandingPageActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -29,6 +32,7 @@
         <activity
             android:name=".ReadyTransferActivity"
             android:label="@string/title_activity_ready_transfer"
+            android:screenOrientation="portrait"
             android:parentActivityName=".CreateTransferActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -37,6 +41,7 @@
         <activity
             android:name=".ReplyTransferActivity"
             android:label="@string/title_activity_reply_transfer"
+            android:screenOrientation="portrait"
             android:parentActivityName=".LandingPageActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -45,6 +50,7 @@
         <activity
             android:name=".FinishTransferActivity"
             android:label="@string/title_activity_finish_transfer"
+            android:screenOrientation="portrait"
             android:parentActivityName=".LandingPageActivity">
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
@@ -59,6 +65,7 @@
         <activity
             android:name=".CreateAccountActivity"
             android:label="@string/title_activity_create_account"
+            android:screenOrientation="portrait"
             android:parentActivityName=".LoginActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -66,16 +73,24 @@
         </activity>
         <activity
             android:name=".LandingPageActivity"
-            android:label="@string/title_activity_landing_page" />
+            android:label="@string/title_activity_landing_page"
+            android:screenOrientation="portrait"
+            />
         <activity
             android:name=".AddEthActivity"
-            android:label="@string/title_activity_add_eth" />
+            android:label="@string/title_activity_add_eth"
+            android:screenOrientation="portrait"
+            />
         <activity
             android:name=".ReceiveTransferActivity"
-            android:label="@string/title_activity_receive_transfer" />
+            android:label="@string/title_activity_receive_transfer"
+            android:screenOrientation="portrait"
+            />
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -83,7 +98,9 @@
         </activity>
         <activity
             android:name=".CreateReplyTransferActivity"
-            android:label="@string/title_activity_create_reply_transfer">
+            android:label="@string/title_activity_create_reply_transfer"
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
                 <data android:mimeType="application/com.example.graeme.beamitup/ready_transfer" />
