Testing out TransferSenderService. Test does not work if setup is actually in setup. Sync issues?

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -107,6 +107,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <service android:name=".TransferSenderService" />
     </application>
 
 </manifest>
