--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,12 @@
         <activity
             android:name=".account.LoginActivity"
             android:label="@string/title_activity_login"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".transfer.CreateTransferActivity"
             android:label="@string/title_activity_transfer_money"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".transfer.LandingPageActivity">
+            android:parentActivityName=".transfer.LandingPageActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.graeme.beamitup.transfer.LandingPageActivity" />
@@ -34,8 +33,8 @@
         <activity
             android:name=".transfer.ReadyTransferActivity"
             android:label="@string/title_activity_ready_transfer"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".transfer.CreateTransferActivity">
+            android:parentActivityName=".transfer.CreateTransferActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.graeme.beamitup.transfer.CreateTransferActivity" />
@@ -43,8 +42,8 @@
         <activity
             android:name=".transfer.ReplyTransferActivity"
             android:label="@string/title_activity_reply_transfer"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".transfer.LandingPageActivity">
+            android:parentActivityName=".transfer.LandingPageActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.graeme.beamitup.transfer.LandingPageActivity" />
@@ -52,11 +51,13 @@
         <activity
             android:name=".transfer.FinishTransferActivity"
             android:label="@string/title_activity_finish_transfer"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".transfer.LandingPageActivity">
+            android:parentActivityName=".transfer.LandingPageActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+
                 <data android:mimeType="application/com.example.graeme.beamitup/reply_transfer" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
 
@@ -67,8 +68,8 @@
         <activity
             android:name=".account.CreateAccountActivity"
             android:label="@string/title_activity_create_account"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".account.LoginActivity">
+            android:parentActivityName=".account.LoginActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.graeme.beamitup.account.LoginActivity" />
@@ -76,40 +77,61 @@
         <activity
             android:name=".transfer.LandingPageActivity"
             android:label="@string/title_activity_landing_page"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".eth.AddEthActivity"
             android:label="@string/title_activity_add_eth"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".transfer.ReceiveTransferActivity"
             android:label="@string/title_activity_receive_transfer"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".account.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".transfer.CreateReplyTransferActivity"
             android:label="@string/title_activity_create_reply_transfer"
-            android:screenOrientation="portrait"
-            >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+
                 <data android:mimeType="application/com.example.graeme.beamitup/ready_transfer" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".request.CreateRequestActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_create_request" />
+        <activity
+            android:name=".request.ReadyRequestActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_ready_request" />
+        <activity
+            android:name=".request.ReceiveRequestActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_receive_request" >
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
 
+                <data android:mimeType="./receive_request" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".request.FinishRequestActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_finish_request" />
     </application>
 
 </manifest>
