--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -111,14 +111,17 @@
         <activity
             android:name=".request.CreateRequestActivity"
             android:screenOrientation="portrait"
+            android:parentActivityName=".transfer.LandingPageActivity"
             android:label="@string/title_activity_create_request" />
         <activity
             android:name=".request.ReadyRequestActivity"
             android:screenOrientation="portrait"
+            android:parentActivityName=".transfer.LandingPageActivity"
             android:label="@string/title_activity_ready_request" />
         <activity
             android:name=".request.ReceiveRequestActivity"
             android:screenOrientation="portrait"
+            android:parentActivityName=".transfer.LandingPageActivity"
             android:label="@string/title_activity_receive_request" >
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
@@ -131,6 +134,7 @@
         <activity
             android:name=".request.FinishRequestActivity"
             android:screenOrientation="portrait"
+            android:parentActivityName=".transfer.LandingPageActivity"
             android:label="@string/title_activity_finish_request" />
     </application>
 
