--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,13 @@ android {
 
 dependencies {
     implementation 'com.android.support:recyclerview-v7:23.4.0'
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:23.4.0'
-    testCompile 'junit:junit:4.12'
-    compile 'org.web3j:core:3.1.1-android'
-    compile 'org.apache.commons:commons-lang3:3.5'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:23.4.0'
+    testImplementation 'junit:junit:4.12'
+    implementation 'org.web3j:core:3.1.1-android'
+    implementation 'org.apache.commons:commons-lang3:3.5'
 }
