--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'org.web3j:core:3.1.1-android'
     implementation 'org.apache.commons:commons-lang3:3.5'
-    testImplementation 'org.mockito:mockito-core:2.18.3'
+    androidTestImplementation 'org.mockito:mockito-core:2.18.3'
 }
