Switched GenerateWallet from Task to Service.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.graeme.beamitup.eth.EthListActivity" />
         </activity>
+
+        <service android:name=".eth_tasks.GenerateWalletService" />
     </application>
 
 </manifest>
