Removed useless tasks. Switched SendTransaction to a Service. Removed Static from BeamItup. Neutered tests. Planning on switching to websockets.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,7 @@
         </activity>
 
         <service android:name=".eth_tasks.GenerateWalletService" />
+        <service android:name=".eth_tasks.SendTransactionService" />
     </application>
 
 </manifest>
