--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.5'
     androidTestImplementation 'org.mockito:mockito-core:2.18.3'
     implementation 'org.greenrobot:greendao:3.2.2'
+    implementation 'com.google.zxing:core:3.3.0'
+    implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
 }
