--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         <activity
             android:name=".wallet.AddWalletActivity"
             android:label="@string/title_activity_add_wallet"
-            android:parentActivityName=".wallet.WalletListActivity"
+            android:parentActivityName=".LandingPageActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".request.CreateRequestActivity"
@@ -58,13 +58,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".wallet.WalletListActivity"
-            android:label="@string/title_activity_wallet"
-            android:parentActivityName=".LandingPageActivity" />
-        <activity
             android:name=".wallet.WalletDetailActivity"
             android:label="@string/title_activity_wallet_detail"
-            android:parentActivityName=".wallet.WalletListActivity" />
+            android:parentActivityName=".LandingPageActivity" />
 
         <service android:name=".wallet.GenerateWalletService" />
         <service android:name=".transaction.SendTransactionService"/>
