Added event for new wallets

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     implementation 'org.greenrobot:greendao:3.2.2'
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 }
