Abstractios of notifications, attempt at unit testing - builder is null, making test fail

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'org.web3j:core:4.1.0-android'
     implementation 'org.apache.commons:commons-lang3:3.5'
-    androidTestImplementation 'org.mockito:mockito-core:2.18.3'
+    testImplementation 'org.mockito:mockito-core:2.23.4'
+    androidTestImplementation 'org.mockito:mockito-android:2.23.4'
     implementation 'org.greenrobot:greendao:3.2.2'
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
